# AI_Semester_Project

./: GUI.html  README.md  a.txt  generate_data.py  generate_training_data.py  pyproject.toml  requirements.txt  run_game.py  tournament.py
Connect4Helpers/agents/: __init__.py  mcts_agent.py  minimax_agent.py  neural_mcts_agent.py
Connect4Helpers/engines/: minimax_engine.py  neural_mcts.py
Connect4Helpers/interfaces/: board.py  mcts_interface.py  neural_interface.py
alphaconnect4/agents/: mcts_agent.py
api/: run_flask.py  run_flask_gunicorn.py
data/: read.py  training_1a.npy  training_1b.npy
gameplay/: game.py  visual_engine.py
neural_scripts/: training_script.py
tests/test_api/: test_run_flask_command.py
